json/sydney/mount.tf

provider "aws" {
  region = "ap-southeast-2"
}

resource "aws_vpc" "sydney" {
  cidr_block = "10.13.0.0/16"
}

resource "aws_lb" "lb" {
  name = "sydney"
  internal = false
  load_balancer_type = "application"
  security_groups = [
    aws_security_group.https.id
  ]
  subnets = [
    aws_subnet.sydney_ap_southeast_2a_gateway.id,
    aws_subnet.sydney_ap_southeast_2b_gateway.id,
    aws_subnet.sydney_ap_southeast_2c_gateway.id
  ]
  enable_http2 = true
}

resource "aws_security_group" "https" {
  name = "sydney"
  description = "Allow TLS inbound traffic to the cloud"
  vpc_id = aws_vpc.sydney.id
  ingress {
    description = "TLS from VPC"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = [
      "10.13.0.0/21",
      "10.13.24.0/21",
      "10.13.48.0/21"
    ]
  }
  egress {
    description = "Outbound traffic"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_subnet" "sydney_ap_southeast_2a_gateway" {
  vpc_id = aws_vpc.sydney.id
  cidr_block = "10.13.0.0/21"
  availability_zone = "ap-southeast-2a"
}

resource "aws_subnet" "sydney_ap_southeast_2a_compute" {
  vpc_id = aws_vpc.sydney.id
  cidr_block = "10.13.8.0/21"
  availability_zone = "ap-southeast-2a"
}

resource "aws_subnet" "sydney_ap_southeast_2a_storage" {
  vpc_id = aws_vpc.sydney.id
  cidr_block = "10.13.16.0/21"
  availability_zone = "ap-southeast-2a"
}

resource "aws_subnet" "sydney_ap_southeast_2b_gateway" {
  vpc_id = aws_vpc.sydney.id
  cidr_block = "10.13.24.0/21"
  availability_zone = "ap-southeast-2b"
}

resource "aws_subnet" "sydney_ap_southeast_2b_compute" {
  vpc_id = aws_vpc.sydney.id
  cidr_block = "10.13.32.0/21"
  availability_zone = "ap-southeast-2b"
}

resource "aws_subnet" "sydney_ap_southeast_2b_storage" {
  vpc_id = aws_vpc.sydney.id
  cidr_block = "10.13.40.0/21"
  availability_zone = "ap-southeast-2b"
}

resource "aws_subnet" "sydney_ap_southeast_2c_gateway" {
  vpc_id = aws_vpc.sydney.id
  cidr_block = "10.13.48.0/21"
  availability_zone = "ap-southeast-2c"
}

resource "aws_subnet" "sydney_ap_southeast_2c_compute" {
  vpc_id = aws_vpc.sydney.id
  cidr_block = "10.13.56.0/21"
  availability_zone = "ap-southeast-2c"
}

resource "aws_subnet" "sydney_ap_southeast_2c_storage" {
  vpc_id = aws_vpc.sydney.id
  cidr_block = "10.13.64.0/21"
  availability_zone = "ap-southeast-2c"
}

output "lb_arn" {
  value = aws_lb.lb.arn
}
